Changed intro for more clarification.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WebDev Lab 1</title>
 </head>
 <body>
-    <h1>Welcome to My WebDev Lab 1 Page</h1>
+    <h1>Welcome to my ITMD 361 Lab 1 Page</h1>
     <p>My name is Leo De Leon, and I'm a fourth year CS major.</p>
     <p>I enjoy exploring new technologies and building fun projects.</p>
     <p>In my free time, I like playing video games and playing soccer.</p>
