--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebDev Lab 1</title>
+    <title>ITMD 361 Lab 1</title>
 </head>
 <body>
     <h1>Welcome to my ITMD 361 Lab 1 Page</h1>
