refined the changes needed before turning it in.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITMD 361 Lab 1</title>
+  <meta charset="utf-8">
+  <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-    <h1>Welcome to my ITMD 361 Lab 1 Page</h1>
+    <p>&amp; Hello world. This is my first website!</p>
     <p>My name is Leo De Leon, and I'm a fourth year CS major.</p>
     <p>I enjoy exploring new technologies and building fun projects.</p>
     <p>In my free time, I like playing video games and playing soccer.</p>
-</body>
-</html>
+  </body>
+  </html>
